Fix mobile overflow

--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -63,6 +63,7 @@
     }
 
     code {
+        @apply overflow-x-auto whitespace-pre-wrap break-words;
         font-family: 'JetBrainsMono', monospace;
     }
 
